# picture-archivist

./: README.md
FSharp/: ArchivePictures.sln
FSharp/ArchivePictures/: Archive.fs  ArchivePictures.fsproj  AssemblyInfo.fs  Domain.fs  FileMover.fs  FileSystem.fs  Moves.fs  Paths.fs  Photo.fs  Program.fs  Tree.fs
FSharp/ArchivePictures.UnitTests/: ArchivePictures.UnitTests.fsproj  ArchiveTests.fs  AssemblyInfo.fs  TreeTests.fs  packages.config
Haskell/: .gitignore  ArchivePictures.cabal  README.md  stack.yaml
Haskell/src/: Archive.hs  Main.hs  Tree.hs
Haskell/test/: ArchiveTest.hs  Spec.hs  TreeTest.hs
