name:                ArchivePictures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ArchivePictures#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Seemann
maintainer:          example@example.com
copyright:           2018 Mark Seemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable archpics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
