name:                ArchivePictures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ArchivePictures#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Seemann
maintainer:          example@example.com
copyright:           2018 Mark Seemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable archpics
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Tree
                     , Archive
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , containers
                     , time
                     , filepath
                     , hsexif

library
  hs-source-dirs:      src
  exposed-modules:     Tree
                     , Archive
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , containers
                     , time
                     , filepath
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite ArchivePictures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TreeTest
                     , ArchiveTest
  build-depends:       ArchivePictures
                     , base
                     , time
                     , filepath
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010